force-app/main/default/objects/CellOrder__c.object
<CustomObject>
    <description>Junction object between Cell, Order and Contact</description>
    <fields>
        <fullName>Cell__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cell</label>
        <referenceTo>Cell__c</referenceTo>
        <relationshipLabel>Cell Orders</relationshipLabel>
        <relationshipName>CellOrders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cell Orders</relationshipLabel>
        <relationshipName>Cell_Orders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending delivery</fullName>
                    <default>true</default>
                    <label>Pending delivery</label>
                </value>
                <value>
                    <fullName>Delivering</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cell Order</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Cell Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cell Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>