force-app/main/default/objects/CellOrder__c/fields/ParcelLocker__c.field-meta.xml
<CustomField>
    <fullName>ParcelLocker__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Parcel Locker</label>
    <referenceTo>ParcelLocker__c</referenceTo>
    <relationshipLabel>Cell Orders</relationshipLabel>
    <relationshipName>Cell_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>