force-app/main/default/objects/CellOrder__c/validationRules/Disallow_populating_Cell_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Disallow_populating_Cell_field</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(ISPICKVAL(State__c, &apos;Pending delivery&apos;), ISPICKVAL(State__c, &apos;Delivering&apos;)),
    NOT(ISBLANK(Cell__c))
)</errorConditionFormula>
    <errorDisplayField>Cell__c</errorDisplayField>
    <errorMessage>You cannot specify a Cell for Pending delivery or Delivering status</errorMessage>
</ValidationRule>