force-app/main/default/objects/CellOrder__c/validationRules/Ensure_Cell_matches_parcel_locker.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_Cell_matches_parcel_locker</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Cell__c)),
  Cell__r.ParcelLocker__c &lt;&gt; ParcelLocker__c
)</errorConditionFormula>
    <errorDisplayField>Cell__c</errorDisplayField>
    <errorMessage>The selected Cell does not belong to the specified Parcel Locker</errorMessage>
</ValidationRule>