force-app/main/default/objects/CellOrder__c/validationRules/Lock_fields_after_delivery_completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_fields_after_delivery_completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(PRIORVALUE(State__c), &apos;Delivered&apos;),
        ISPICKVAL(PRIORVALUE(State__c), &apos;Completed&apos;)
    ),
    OR(ISCHANGED(Cell__c), ISCHANGED(Order__c), ISCHANGED(ParcelLocker__c), ISCHANGED(Contact__c))
)</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>Fields cannot be edited after delivery is completed</errorMessage>
</ValidationRule>