force-app/main/default/objects/CellOrder__c/validationRules/Require_Cell_for_delivered_status.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Cell_for_delivered_status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(State__c, &apos;Delivered&apos;),
        ISPICKVAL(State__c, &apos;Completed&apos;)
    ),
    ISBLANK(Cell__c)
)</errorConditionFormula>
    <errorDisplayField>Cell__c</errorDisplayField>
    <errorMessage>Cell must be populated for Delivered and Completed status</errorMessage>
</ValidationRule>